--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,51 +1,138 @@
-﻿*{
-margin:0;
-padding: 0;
-text-decoration: none;
-list-style: none;
-font-family: "lato",sans-serif;
+﻿* {
+	margin: 0;
+	padding: 0;
+	text-decoration: none;
+	list-style: none;
+	font-family: "lato", sans-serif;
 }
-html
-{
-    scroll-behavior: smooth;
+html {
+	scroll-behavior: smooth;
 }
-body
-{
-    max-width: 1084px;
-    margin: 0 auto;
-    overflow-x: hidden;
+
+body{
+	max-width: 1084px;
+	margin: 0 auto;
+	overflow-x: hidden;
+
+
 }
-header
-{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 60px;
+header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 60px;
+	
 }
-ul
-{
-    width:214px;
-    display: flex;
-    justify-content: space-between;
+
+
+ul	{
+	width: 214px;
+	display: flex;
+	justify-content: space-between;
 }
-a
-{
-    transition: 300ms color ease;
-    color: #1818181;
+a{
+	transition: 300ms color ease;
+	color: #181818;
+
 }
-a:hover
-{
-    color: #BADC58;
-    transition: 300ms color ease;
+
+
+a:hover {
+	color: #BADC58;
+	transition: 300ms color ease;
 }
-.hero-content
-{
-    height: calc(100vh - 60px);
-    width: 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+
+.hero-content {
+height: calc(100vh - 60px);
+width: 100%;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center; 
+
+
+}
+.hero-content::after{
+    content: url(../images/basil1.png);
+    position: absolute;
+    z-index: 1;
+    right: -820px;
+    bottom: -350px;
+}
+
+.hero-content::before{
+content: '';
+display: block;
+position: absolute;
+top: 60px;
+bottom: 0px;
+left: 0;
+right: 0;
+background-color: #181818;
+opacity: .6;
+z-index: -1;
+}
+h1 {
+	font-size: 50px;
+	font-weight: 300;
+}
+.h1 {
+	font-size: 14px;
+	font-weight: bold;
+
+
+}
+
+
+.hero-text {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	color: #fff;
+	text-align: center;
+	width: 638px;
+	height: 216px;
+
+}
+.hero-image{
+	position: absolute;
+	z-index: -2;
+	width: 100%;
+	height: calc(100vh - 60px);
+	top: 60px;
+	left: 0;
+	object-fit: cover;
+
+}
+#btn { 
+  background-color: #BADC58;
+  color: white;
+  width: 164px;
+  height: 46px;
+  line-height: 42px;
+	border-radius: 15px;
+ 	top: 470px;
+}
+
+#btn:hover {
+	background-color: white;
+	color: #BADC58;
+	transition: 300ms color ease;
+}
+
+.scroll{
+	position: relative;
+	right: 10px;
+	color: white;
+	padding-top: 60px;
+
+}
+.scroll::before{
+	content: url('../images/Arrow.png');
+	position: relative;
+	top: 50px;
+	left: 64px;
 }
 button
 {
