--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,17 @@
-﻿* {
+﻿@font-face{
+	font-family: caps;
+	src:url(../fonts/caps.ttf)
+}
+@font-face{
+	font-family: normal;
+	src:url(../fonts/normal.woff)
+}
+* {
 	margin: 0;
 	padding: 0;
 	text-decoration: none;
 	list-style: none;
-	font-family: "lato", sans-serif;
+	font-family: normal;
 }
 html {
 	scroll-behavior: smooth;
@@ -22,6 +30,9 @@ header {
 	align-items: center;
 	height: 60px;
 	
+} 
+.h1, h1, button, a,address{
+	font-family: caps;
 }
 
 
@@ -33,10 +44,9 @@ ul	{
 a{
 	transition: 300ms color ease;
 	color: #181818;
+	font-size: 13px;
 
 }
-
-
 a:hover {
 	color: #BADC58;
 	transition: 300ms color ease;
@@ -56,8 +66,8 @@ justify-content: center;
     content: url(../images/basil1.png);
     position: absolute;
     z-index: 1;
-    right: -820px;
-    bottom: -350px;
+    right: -905px;
+    bottom: -388px;
 }
 
 .hero-content::before{
@@ -73,7 +83,8 @@ opacity: .6;
 z-index: -1;
 }
 h1 {
-	font-size: 50px;
+	font-family: caps;
+	font-size: 47px;
 	font-weight: 300;
 }
 .h1 {
@@ -106,6 +117,7 @@ h1 {
 
 }
 #btn { 
+	font-family: caps;
   background-color: #BADC58;
   color: white;
   width: 164px;
@@ -132,7 +144,7 @@ h1 {
 	content: url('../images/Arrow.png');
 	position: relative;
 	top: 50px;
-	left: 64px;
+	left: 63px;
 }
 .hero-menu h1 {
 	font-size: 30px;
@@ -170,12 +182,17 @@ button
     justify-content: center;
     align-items: center;
     position: relative;
-    top: 20px;
+	top: 20px;
+	cursor: pointer;
+	outline: none;
 }	
 .added {
 	background-color: #ECF0F1;
 	border-color: #ECF0F1;
 	color: #BDC3C7;
+	}
+	.add.active{
+		border:1px solid red;
 	}
 	
 	button:hover {
@@ -199,7 +216,7 @@ button
 	
 	}
 	.hero-menu li {
-		width: 308px;
+		width: calc((100% / 3) - 20px);
 		height: 500px;
 		position: relative;
 		bottom: 60px;
@@ -246,8 +263,8 @@ button
 	footer::before{
 		content: url('../images/basil2.png');
 		position: absolute;
-		left: -800px;
-		top: -388px;
+		left: -860px;
+		top: -350px;
 		z-index: -1;
 		width: 322px;
 		height: 222px;
@@ -291,11 +308,11 @@ button
 	}
 	
 	address{
-	font-style: normal;
+	font-style: caps;
 		color:#F59A63; 
 		border-radius: 15px;
 		background-color: white;
-		width: 72%;
+		width: 80%;
 		height: 60px;
 		display: flex;
 		align-items: center;
@@ -307,7 +324,7 @@ button
 	
 	}
 	iframe {
-		width: 72%;
+		width: 80%;
 		height: 55%;
 		border-radius: 15px;
 		display: flex;
@@ -316,4 +333,25 @@ button
 		justify-content: center;
 		margin: 0	 auto;
 		margin-top: 10px;
+	}
+	.hero-logos {
+		width: 72%;
+		position: relative;
+	}
+	.logos{
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+
+	@media (max-width:720px){
+		.hero-menu li{
+			width:calc((100% / 2) - 20px)
+		}
+	}
+	@media (max-width:460px){
+		.hero-menu li{
+			width:calc(100% - 20px)
+		}
 	}
